feat: retry invitation button on Receiver Details page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -369,6 +369,12 @@ body {
     margin-bottom: pxToRem(12px);
   }
 
+  &__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   &__dropdown {
     display: flex;
     align-items: center;
