--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -3,11 +3,32 @@
 .Table-v2__container {
   width: 100%;
   position: relative;
+
+  &--loading {
+    overflow-y: hidden;
+    pointer-events: none;
+
+    .Table-v2__wrapper {
+      opacity: var(--opacity-disabled-button);
+    }
+
+    .Loader {
+      --Loader-color: var(--color-gray-60);
+      --Loader-size: 2rem;
+
+      position: absolute;
+      top: 2rem;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
 
 .Table-v2__wrapper {
   overflow-x: auto;
   overflow-y: hidden;
+  opacity: 1;
+  transition: opacity var(--anim-transition-default);
 }
 
 table.Table-v2 {
@@ -17,7 +38,7 @@ table.Table-v2 {
   thead tr,
   tr:not(:last-child) {
     border-bottom: 1px solid var(--color-gray-30);
-    transition: background-color linear var(--anim-transition-default);
+    transition: background-color var(--anim-transition-default);
 
     &.Table-v2__row--highlighted {
       background-color: var(--color-gray-10);
