--- a/src/components/ReceiverInviteMessage/styles.scss
+++ b/src/components/ReceiverInviteMessage/styles.scss
@@ -1,6 +1,6 @@
 @use "./styles-utils.scss" as *;
 
-.DisbursementInviteMessage {
+.ReceiverInviteMessage {
   &__options {
     .RadioButton {
       --RadioButton-font-size: #{pxToRem(14px)};
