--- a/src/styles.scss
+++ b/src/styles.scss
@@ -424,6 +424,15 @@ body {
   }
 }
 
+.ReceiverContactInfo {
+  &__item {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
 // Wallets
 .WalletBalances {
   display: flex;
