--- a/src/components/ApiKeyCreateModal/styles.scss
+++ b/src/components/ApiKeyCreateModal/styles.scss
@@ -1,48 +1,19 @@
+@use "./styles-utils.scss" as *;
+
 .CreateApiKeyModal {
+  &__description {
+    color: var(--color-gray-60);
+    margin-bottom: pxToRem(24);
+  }
+
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: pxToRem(16);
   }
 
   &__allowedIPs {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__label {
-    display: block;
-    margin-bottom: 0.25rem;
-    font-weight: 500;
-    font-size: 0.875rem;
-  }
-
-  &__textarea {
-    width: 100%;
-    min-height: 80px;
-    padding: 0.5rem;
-    border: 1px solid var(--color-gray-30);
-    border-radius: 4px;
-    font-size: 0.875rem;
-    font-family: monospace;
-    resize: vertical;
-    box-sizing: border-box;
-
-    &--error {
-      border-color: var(--color-red-60);
-    }
-  }
-
-  &__error {
-    color: var(--color-red-60);
-    font-size: 0.75rem;
-    margin-top: 0.25rem;
-  }
-
-  &__note {
-    font-size: 0.75rem;
-    color: var(--color-gray-60);
-    margin-top: 0.25rem;
+    font-family: var(--font-family-mono);
   }
 
   &__permissions {
@@ -51,19 +22,26 @@
   }
 
   &__permissionsHeading {
-    margin-bottom: 0.5rem;
+    margin-bottom: pxToRem(8);
+    color: var(--color-gray-60);
+  }
+
+  &__permissionsDivider {
+    height: 1px;
+    background-color: var(--color-gray-30);
+    margin-bottom: pxToRem(12);
   }
 
   &__permissionsError {
     color: var(--color-red-60);
-    font-size: 0.875rem;
-    margin-bottom: 0.5rem;
+    font-size: pxToRem(14);
+    margin-bottom: pxToRem(8);
   }
 
   &__permissionsList {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: pxToRem(12);
   }
 
   &__permissionRow {
@@ -73,23 +51,24 @@
   }
 
   &__permissionLabel {
-    font-weight: 500;
-    min-width: 120px;
+    font-weight: var(--font-weight-medium);
+    min-width: pxToRem(120);
+    color: var(--color-gray-90);
 
     &--bold {
-      font-weight: 600;
+      font-weight: var(--font-weight-semi-bold);
     }
   }
 
   &__permissionSelect {
     flex-shrink: 0;
-    min-width: 150px;
+    min-width: pxToRem(150);
   }
 
   &__resourcePermissions {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: pxToRem(12);
 
     &--disabled {
       opacity: 0.5;
