--- a/src/components/ApiKeysTable/styles.scss
+++ b/src/components/ApiKeysTable/styles.scss
@@ -1,3 +1,5 @@
+@use "./styles-utils.scss" as *;
+
 .ApiKeysTable {
   &__header {
     display: flex;
@@ -9,9 +11,9 @@
   &__emptyState {
     display: flex;
     flex-direction: column;
-    padding: 48px 24px;
+    padding: pxToRem(48) pxToRem(24);
     text-align: center;
-    gap: 8px;
+    gap: pxToRem(8);
   }
 
   &__actionItem {
