SDP-1640 styles adjustments

--- a/src/components/ApiKeySuccessModal/styles.scss
+++ b/src/components/ApiKeySuccessModal/styles.scss
@@ -26,7 +26,7 @@
 
   &__keyInput {
     height: 44px;
-    font-family: monospace;
+    font-family: var(--font-family-monospace);
     outline: none;
   }
 }
