--- a/src/components/ApiKeyUpdateModal/styles.scss
+++ b/src/components/ApiKeyUpdateModal/styles.scss
@@ -1,36 +1,36 @@
+@use "./styles-utils.scss" as *;
+
 .EditApiKeyModal {
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-  }
-
-  &__readOnlySection {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    border-radius: 4px;
-    border: 1px solid var(--color-gray-20);
+    gap: pxToRem(16);
   }
 
   &__allowedIPs {
     display: flex;
     flex-direction: column;
+    font-family: var(--font-family-mono);
   }
 
   &__label {
     display: block;
-    margin-bottom: 0.25rem;
-    font-weight: 500;
+    margin-bottom: pxToRem(4);
+    font-weight: var(--font-weight-medium);
+    font-size: pxToRem(14);
+    color: var(--color-gray-90);
   }
 
   &__textarea {
-    min-height: 80px;
-    padding: 0.5rem;
+    min-height: pxToRem(80);
+    padding: pxToRem(8);
     border: 1px solid var(--color-gray-30);
-    font-size: 0.875rem;
-    font-family: monospace;
+    border-radius: pxToRem(4);
+    font-size: pxToRem(14);
+    font-family: var(--font-family-mono);
+    resize: vertical;
+    box-sizing: border-box;
+    width: 100%;
 
     &--error {
       border-color: var(--color-red-60);
@@ -39,14 +39,14 @@
 
   &__error {
     color: var(--color-red-60);
-    font-size: 0.75rem;
-    margin-top: 0.25rem;
+    font-size: pxToRem(12);
+    margin-top: pxToRem(4);
   }
 
   &__note {
-    font-size: 0.75rem;
+    font-size: pxToRem(12);
     color: var(--color-gray-60);
-    margin-top: 0.25rem;
+    margin-top: pxToRem(4);
   }
 
   &__permissions {
@@ -55,19 +55,26 @@
   }
 
   &__permissionsHeading {
-    margin-bottom: 0.5rem;
+    margin-bottom: pxToRem(8);
+    color: var(--color-gray-60);
+  }
+
+  &__permissionsDivider {
+    height: 1px;
+    background-color: var(--color-gray-30);
+    margin-bottom: pxToRem(12);
   }
 
   &__permissionsError {
     color: var(--color-red-60);
-    font-size: 0.875rem;
-    margin-bottom: 0.5rem;
+    font-size: pxToRem(14);
+    margin-bottom: pxToRem(8);
   }
 
   &__permissionsList {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: pxToRem(12);
   }
 
   &__permissionRow {
@@ -77,23 +84,24 @@
   }
 
   &__permissionLabel {
-    font-weight: 500;
-    min-width: 120px;
+    font-weight: var(--font-weight-medium);
+    min-width: pxToRem(120);
+    color: var(--color-gray-90);
 
     &--bold {
-      font-weight: 600;
+      font-weight: var(--font-weight-semi-bold);
     }
   }
 
   &__permissionSelect {
     flex-shrink: 0;
-    min-width: 150px;
+    min-width: pxToRem(150);
   }
 
   &__resourcePermissions {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: pxToRem(12);
 
     &--disabled {
       opacity: 0.5;
