--- a/src/components/ApiKeyCreateModal/styles.scss
+++ b/src/components/ApiKeyCreateModal/styles.scss
@@ -26,12 +26,6 @@
     color: var(--color-gray-60);
   }
 
-  &__permissionsDivider {
-    height: 1px;
-    background-color: var(--color-gray-30);
-    margin-bottom: pxToRem(12);
-  }
-
   &__permissionsError {
     color: var(--color-red-60);
     font-size: pxToRem(14);
@@ -39,9 +33,12 @@
   }
 
   &__permissionsList {
+    border-top: pxToRem(1) solid var(--color-gray-30);
+    border-bottom: pxToRem(1) solid var(--color-gray-30);
     display: flex;
     flex-direction: column;
     gap: pxToRem(12);
+    padding: pxToRem(16) 0; 
   }
 
   &__permissionRow {
