SDP 1641 edit api keys (#274)
* SDP-1641 add api key edit modal

* SDP-1641 refactor modals to reuse shared components

* SDP-1641 add custom hook and reuse functions

--- a/src/components/ApiKeyUpdateModal/styles.scss
+++ b/src/components/ApiKeyUpdateModal/styles.scss
@@ -1,6 +1,6 @@
 @use "./styles-utils.scss" as *;
 
-.CreateApiKeyModal {
+.EditApiKeyModal {
   &__description {
     color: var(--color-gray-60);
     margin-bottom: pxToRem(24);
