--- a/src/components/ApiKeyDetails/styles.scss
+++ b/src/components/ApiKeyDetails/styles.scss
@@ -3,13 +3,17 @@
 .ApiKeyDetails {
   &__status {
     font-weight: var(--font-weight-medium);
-    
+
     &--active {
       color: var(--color-green-60);
     }
-    
+
     &--expired {
       color: var(--color-red-60);
     }
   }
+}
+.StatCards__card__item {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
