--- a/src/components/ValueList/styles.scss
+++ b/src/components/ValueList/styles.scss
@@ -1,19 +1,15 @@
 @use "./styles-utils.scss" as *;
 
 .ValuesList {
-  margin: 0;
-  padding: 0;
   list-style: none;
+  display: grid;
+  padding: 0.5rem 1.5rem;
+  grid-template-columns: 1fr 1fr;
 
   &__item {
     color: var(--color-gray-90);
     font-size: pxToRem(14);
     padding: pxToRem(8) 0;
-    border-bottom: 1px solid var(--color-gray-20);
-
-    &:last-child {
-      border-bottom: none;
-    }
   }
 
   &__empty {
