--- a/src/components/ApiKeyFormFields/styles.scss
+++ b/src/components/ApiKeyFormFields/styles.scss
@@ -11,14 +11,14 @@
   }
 
   &__permissionsHeading {
-    margin-bottom: pxToRem(8);
+    margin-bottom: pxToRem(8px);
     color: var(--color-gray-60);
   }
 
   &__permissionsError {
     color: var(--color-red-60);
-    font-size: pxToRem(14);
-    margin-bottom: pxToRem(8);
+    font-size: pxToRem(14px);
+    margin-bottom: pxToRem(8px);
   }
 
   &__permissionsList {
@@ -26,8 +26,8 @@
     border-bottom: pxToRem(1) solid var(--color-gray-30);
     display: flex;
     flex-direction: column;
-    gap: pxToRem(12);
-    padding: pxToRem(16) 0;
+    gap: pxToRem(12px);
+    padding: pxToRem(16px) 0;
   }
 
   &__permissionRow {
@@ -38,7 +38,7 @@
 
   &__permissionLabel {
     font-weight: var(--font-weight-medium);
-    min-width: pxToRem(120);
+    min-width: pxToRem(120px);
     color: var(--color-gray-90);
 
     &--bold {
@@ -48,13 +48,13 @@
 
   &__permissionSelect {
     flex-shrink: 0;
-    min-width: pxToRem(150);
+    min-width: pxToRem(150px);
   }
 
   &__resourcePermissions {
     display: flex;
     flex-direction: column;
-    gap: pxToRem(12);
+    gap: pxToRem(12px);
 
     &--disabled {
       opacity: 0.5;
