--- a/src/components/ApiKeySuccessModal/styles.scss
+++ b/src/components/ApiKeySuccessModal/styles.scss
@@ -4,7 +4,7 @@
   &__header {
     display: flex;
     align-items: center;
-    gap: pxToRem(8);
+    gap: pxToRem(8px);
   }
 
   &__successIcon {
@@ -19,8 +19,8 @@
       position: absolute;
       right: 0;
       top: 0;
-      height: pxToRem(44);
-      width: pxToRem(100);
+      height: pxToRem(44px);
+      width: pxToRem(100px);
     }
   }
 
