--- a/src/components/ApiKeyFormFields/styles.scss
+++ b/src/components/ApiKeyFormFields/styles.scss
@@ -22,8 +22,8 @@
   }
 
   &__permissionsList {
-    border-top: pxToRem(1) solid var(--color-gray-30);
-    border-bottom: pxToRem(1) solid var(--color-gray-30);
+    border-top: pxToRem(1px) solid var(--color-gray-30);
+    border-bottom: pxToRem(1px) solid var(--color-gray-30);
     display: flex;
     flex-direction: column;
     gap: pxToRem(12px);
