--- a/src/components/BridgeIntegrationSection/styles.scss
+++ b/src/components/BridgeIntegrationSection/styles.scss
@@ -4,23 +4,27 @@
   display: flex;
   flex-direction: column;
   gap: pxToRem(16px);
-
+  
+  &__account,
   &__virtualAccountSection {
     display: flex;
     flex-direction: column;
     gap: pxToRem(16px);
-    padding-top: pxToRem(8px);
   }
 
-  &__actions {
+  &__virtualAccountSection {
+    padding-top: pxToRem(8px);
+  }
+  
+  &__actions,
+  &__faqSection,
+  &__button {
     display: flex;
     justify-content: flex-end;
   }
 
-  &__account {
-    display: flex;
-    flex-direction: column;
-    gap: pxToRem(16px);
+  &__faqSection {
+    padding-top: pxToRem(16px);
   }
 
   &__accountHeader {
@@ -28,21 +32,6 @@
     justify-content: space-between;
     align-items: center;
     gap: pxToRem(16px);
-
-    h4 {
-      margin: 0;
-      color: var(--color-gray-90);
-      font-size: pxToRem(16px);
-      font-weight: 500;
-    }
-  }
-
-  &__accountStatus {
-    display: flex;
-    align-items: center;
-    gap: pxToRem(8px);
-    font-size: pxToRem(14px);
-    font-weight: 500;
   }
 
   &__error {
@@ -57,24 +46,5 @@
       line-height: 1.5;
       color: var(--color-gray-80);
     }
-  }
-
-  &__faqSection {
-    display: flex;
-    justify-content: flex-end;
-    padding-top: pxToRem(16px);
-  }
-
-  &__button {
-    display: flex;
-    justify-content: flex-end;
-  }
-}
-
-.BridgeStatus {
-  color: currentColor;
-
-  &--success {
-    color: var(--color-green-60);
   }
 }
