Update old CSS variables

--- a/src/components/Breadcrumbs/styles.scss
+++ b/src/components/Breadcrumbs/styles.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   gap: pxToRem(4px);
-  font-weight: var(--font-weight-medium);
+  font-weight: var(--sds-fw-medium);
   margin-bottom: pxToRem(16px);
   color: var(--sds-clr-gray-09);
 
