--- a/src/components/BridgeAccountDetails/styles.scss
+++ b/src/components/BridgeAccountDetails/styles.scss
@@ -35,7 +35,7 @@
   &__label,
   &__value,
   &__address {
-    font-family: var(--font-family-sans-serif);
+    font-family: var(--sds-ff-base);
     font-size: pxToRem(14px);
     font-weight: 500;
     line-height: pxToRem(20px);
