--- a/src/components/CsvPreview/styles.scss
+++ b/src/components/CsvPreview/styles.scss
@@ -14,7 +14,7 @@
       font-size: pxToRem(8px);
       line-height: 1;
       color: var(--sds-clr-gray-12);
-      font-weight: var(--font-weight-regular);
+      font-weight: var(--sds-fw-regular);
       padding: 0 pxToRem(8px);
       border: 1px solid var(--sds-clr-gray-08);
       box-sizing: border-box;
