--- a/src/components/DirectPaymentCreateModal/styles.scss
+++ b/src/components/DirectPaymentCreateModal/styles.scss
@@ -79,7 +79,7 @@
 
   &__error {
     display: block;
-    color: var(--color-error);
+    color: var(--sds-clr-red-11);
     font-size: pxToRem(12px);
     font-weight: 400;
     margin-top: pxToRem(4px);
