--- a/src/components/ValueList/styles.scss
+++ b/src/components/ValueList/styles.scss
@@ -19,7 +19,7 @@
 
   &--monospace {
     .ValuesList__item {
-      font-family: var(--font-family-monospace);
+      font-family: var(--sds-ff-monospace);
     }
   }
 }
