--- a/src/components/ApiKeyDetails/styles.scss
+++ b/src/components/ApiKeyDetails/styles.scss
@@ -2,14 +2,14 @@
 
 .ApiKeyDetails {
   &__status {
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
 
     &--active {
-      color: var(--color-green-60);
+      color: var(--sds-clr-green-11);
     }
 
     &--expired {
-      color: var(--color-red-60);
+      color: var(--sds-clr-red-11);
     }
   }
 }
