--- a/src/components/ApiKeyFormFields/styles.scss
+++ b/src/components/ApiKeyFormFields/styles.scss
@@ -2,7 +2,7 @@
 
 .ApiKeyFormFields {
   &__allowedIPs {
-    font-family: var(--font-family-mono);
+    font-family: var(--sds-ff-monospace);
   }
 
   &__permissions {
@@ -16,7 +16,7 @@
   }
 
   &__permissionsError {
-    color: var(--color-red-60);
+    color: var(--sds-clr-red-11);
     font-size: pxToRem(14px);
     margin-bottom: pxToRem(8px);
   }
@@ -37,12 +37,12 @@
   }
 
   &__permissionLabel {
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     min-width: pxToRem(120px);
     color: var(--sds-clr-gray-12);
 
     &--bold {
-      font-weight: var(--font-weight-semi-bold);
+      font-weight: var(--sds-fw-semi-bold);
     }
   }
 
