--- a/src/components/ApiKeysTable/styles.scss
+++ b/src/components/ApiKeysTable/styles.scss
@@ -29,10 +29,10 @@
   font-weight: 500;
 
   &[data-status="active"] {
-    color: var(--color-green-60);
+    color: var(--sds-clr-green-11);
   }
 
   &[data-status="expired"] {
-    color: var(--color-red-60);
+    color: var(--sds-clr-red-11);
   }
 }
