--- a/src/components/DisbursementDetails/styles.scss
+++ b/src/components/DisbursementDetails/styles.scss
@@ -16,11 +16,11 @@
     font-size: pxToRem(12px);
     line-height: pxToRem(20px);
     color: var(--sds-clr-gray-11);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     margin-top: pxToRem(4px);
   }
 
   &__negative {
-    color: var(--color-red-60);
+    color: var(--sds-clr-red-11);
   }
 }
