--- a/src/components/DisbursementStatus/styles.scss
+++ b/src/components/DisbursementStatus/styles.scss
@@ -2,7 +2,7 @@
   color: currentColor;
 
   &--success {
-    color: var(--color-green-60);
+    color: var(--sds-clr-green-11);
   }
 
   &--disabled {
