--- a/src/components/FileUpload/styles.scss
+++ b/src/components/FileUpload/styles.scss
@@ -6,8 +6,8 @@
   border-radius: pxToRem(4px);
   padding: pxToRem(16px);
   transition:
-    border-color var(--anim-transition-default),
-    background-color var(--anim-transition-default);
+    border-color var(--sds-anim-transition-default),
+    background-color var(--sds-anim-transition-default);
 
   &--active {
     background-color: var(--sds-clr-gray-03);
@@ -15,8 +15,8 @@
   }
 
   &--disabled {
-    background-color: var(--color-red-20);
-    border: 1px dashed var(--color-red-50);
+    background-color: var(--sds-clr-red-03);
+    border: 1px dashed var(--sds-clr-red-08);
   }
 
   &__button {
@@ -26,11 +26,11 @@
   &__message {
     font-size: pxToRem(12px);
     line-height: pxToRem(20px);
-    font-weight: var(--font-weight-regular);
+    font-weight: var(--sds-fw-regular);
     color: var(--sds-clr-gray-09);
 
     &--error {
-      color: var(--color-red-60);
+      color: var(--sds-clr-red-09);
     }
   }
 }
