--- a/src/components/MultipleAmounts/styles.scss
+++ b/src/components/MultipleAmounts/styles.scss
@@ -11,7 +11,7 @@
     color: var(--sds-clr-gray-09);
     font-size: pxToRem(12px);
     line-height: pxToRem(20px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     text-align: center;
     padding: 1px pxToRem(4px);
     cursor: pointer;
