--- a/src/components/Pagination/styles.scss
+++ b/src/components/Pagination/styles.scss
@@ -8,7 +8,7 @@
 
   font-size: pxToRem(12px);
   line-height: pxToRem(20px);
-  font-weight: var(--font-weight-regular);
+  font-weight: var(--sds-fw-regular);
   color: var(--sds-clr-gray-11);
 
   span {
