--- a/src/components/WalletTrustlines/styles.scss
+++ b/src/components/WalletTrustlines/styles.scss
@@ -15,7 +15,7 @@
       gap: pxToRem(4px);
       font-size: pxToRem(14px);
       line-height: pxToRem(22px);
-      font-weight: var(--font-weight-regular);
+      font-weight: var(--sds-fw-regular);
       color: var(--sds-clr-gray-11);
       overflow: hidden;
 
