--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use "styles-utils.scss" as *;
 
 body {
-  font-family: var(--font-family-base);
+  font-family: var(--sds-ff-base);
   font-size: pxToRem(14px);
   overflow-y: hidden;
 }
@@ -54,7 +54,7 @@ body {
     }
 
     .CodeSnippet {
-      font-family: var(--font-family-monospace);
+      font-family: var(--sds-ff-monospace);
     }
   }
 
@@ -82,11 +82,11 @@ body {
   margin-top: pxToRem(8px);
 
   &--error {
-    color: var(--color-red-60);
+    color: var(--sds-clr-red-09);
   }
 
   &--success {
-    color: var(--color-green-60);
+    color: var(--sds-clr-green-09);
   }
 
   &--small {
@@ -180,13 +180,13 @@ body {
     &__title {
       font-size: pxToRem(14px);
       line-height: pxToRem(22px);
-      font-weight: var(--font-weight-medium);
+      font-weight: var(--sds-fw-medium);
     }
 
     &__unit {
       font-size: pxToRem(18px);
       line-height: pxToRem(26px);
-      font-weight: var(--font-weight-regular);
+      font-weight: var(--sds-fw-regular);
       margin-top: pxToRem(8px);
     }
 
@@ -228,14 +228,14 @@ body {
       }
 
       &__label {
-        font-weight: var(--font-weight-medium);
+        font-weight: var(--sds-fw-medium);
         color: var(--sds-clr-gray-09);
         display: block;
         margin-bottom: pxToRem(4px);
       }
 
       &__value {
-        font-weight: var(--font-weight-regular);
+        font-weight: var(--sds-fw-regular);
         color: var(--sds-clr-gray-11);
       }
     }
@@ -357,7 +357,7 @@ body {
     color: var(--sds-clr-gray-10);
     font-size: pxToRem(14px);
     line-height: pxToRem(22px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     margin-bottom: pxToRem(-12px) !important;
   }
 }
@@ -455,7 +455,7 @@ body {
   .AssetAmount {
     font-size: pxToRem(14px);
     line-height: pxToRem(22px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     color: var(--sds-clr-gray-11);
 
     &__icon {
@@ -483,7 +483,7 @@ body {
   &__title {
     font-size: pxToRem(16px);
     line-height: pxToRem(24px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     color: var(--sds-clr-gray-12);
 
     display: flex;
@@ -540,7 +540,7 @@ body {
     &__value {
       font-size: pxToRem(14px);
       line-height: pxToRem(22px);
-      font-weight: var(--font-weight-regular);
+      font-weight: var(--sds-fw-regular);
       color: var(--sds-clr-gray-11);
     }
   }
@@ -555,7 +555,7 @@ body {
 
       align-items: center;
       justify-content: space-between;
-      transition: background-color var(--anim-transition-default);
+      transition: background-color var(--sds-anim-transition-default);
     }
 
     .FileUpload__info {
@@ -564,7 +564,7 @@ body {
       gap: pxToRem(12px);
       font-size: pxToRem(12px);
       line-height: pxToRem(20px);
-      font-weight: var(--font-weight-regular);
+      font-weight: var(--sds-fw-regular);
       color: var(--sds-clr-gray-09);
       order: -1;
       max-width: 60%;
@@ -599,7 +599,7 @@ body {
     grid-column: 1 / -1;
     font-size: pxToRem(12px);
     line-height: pxToRem(20px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
     color: var(--sds-clr-gray-10);
     display: flex;
     align-items: flex-start;
@@ -675,10 +675,10 @@ body {
   }
 
   .Banner .Link {
-    --Link-color-default: var(--color-yellow-70);
-    --Link-color-hover: var(--color-yellow-80);
-    --Link-color-disabled: var(--color-yellow-50);
-    font-weight: var(--font-weight-semi-bold);
+    --Link-color-default: var(--sds-clr-amber-11);
+    --Link-color-hover: var(--sds-clr-amber-12);
+    --Link-color-disabled: var(--sds-clr-amber-08);
+    font-weight: var(--sds-fw-semi-bold);
   }
 }
 
@@ -689,7 +689,7 @@ body {
     color: var(--sds-clr-gray-10);
     font-size: pxToRem(12px);
     line-height: pxToRem(18px);
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--sds-fw-medium);
   }
 }
 
@@ -725,9 +725,9 @@ body {
   }
 
   .Link {
-    --Link-color-default: var(--color-red-60);
-    --Link-color-hover: var(--color-red-70);
-    --Link-color-disabled: var(--color-red-50);
+    --Link-color-default: var(--sds-clr-red-11);
+    --Link-color-hover: var(--sds-clr-red-12);
+    --Link-color-disabled: var(--sds-clr-red-08);
   }
 }
 
@@ -738,8 +738,8 @@ body {
 }
 
 #root {
-  --layout-window-width-min: 1200px;
-  --layout-window-height-min: auto;
+  --sds-window-width-min: 1200px;
+  --sds-window-height-min: auto;
 
   --sds-gap-xs: #{pxToRem(4px)};
   --sds-gap-sm: #{pxToRem(8px)};
