--- a/src/components/DirectPaymentCreateModal/styles.scss
+++ b/src/components/DirectPaymentCreateModal/styles.scss
@@ -16,6 +16,7 @@
     box-shadow: 0 pxToRem(4px) pxToRem(12px) rgba(0, 0, 0, 0.1);
     max-height: pxToRem(200px);
     margin-top: pxToRem(4px);
+    overflow-y: scroll !important;
   }
 
   &__searchResult {
@@ -89,8 +90,8 @@
     display: grid;
     grid-template-rows: 0fr;
     transition:
-      grid-template-rows ease-in-out 300ms,
-      margin ease-in-out 300ms;
+    grid-template-rows ease-in-out 300ms,
+    margin ease-in-out 300ms;
     margin-bottom: 0;
 
     &[data-visible="true"] {
