--- a/src/components/DirectPaymentCreateModal/styles.scss
+++ b/src/components/DirectPaymentCreateModal/styles.scss
@@ -16,7 +16,11 @@
     box-shadow: 0 pxToRem(4px) pxToRem(12px) rgba(0, 0, 0, 0.1);
     max-height: pxToRem(200px);
     margin-top: pxToRem(4px);
-    overflow-y: scroll !important;
+
+    &__content {
+      max-height: 100%;
+      overflow-y: auto;
+    }
   }
 
   &__searchResult {
