--- a/src/components/ReceiverCreateModal/styles.scss
+++ b/src/components/ReceiverCreateModal/styles.scss
@@ -17,6 +17,7 @@ $input-min-width-large: pxToRem(200px);
   // LAYOUT & STRUCTURE
   &__content {
     overflow-y: auto;
+    overflow-x: hidden;
     max-height: $modal-max-height;
   }
 
@@ -48,7 +49,8 @@ $input-min-width-large: pxToRem(200px);
     flex-wrap: wrap;
     gap: $spacing-md;
     align-items: flex-end;
-    margin-bottom: $spacing-lg;
+    padding-top: pxToRem(5px);
+    padding-bottom: pxToRem(5px);
 
     .Button {
       flex-shrink: 0;
@@ -59,31 +61,28 @@ $input-min-width-large: pxToRem(200px);
     &--verification {
       .Select {
         flex: 1;
-        min-width: $input-min-width-medium;
       }
 
       .Input {
         flex: 2;
-        min-width: $input-min-width-large;
       }
     }
 
     &--wallet {
       .Input {
         flex: 1;
-        min-width: $input-min-width-small;
       }
 
       .Input:first-child {
         flex: 3;
-        min-width: $input-min-width-large;
+        max-width: 100%;
       }
     }
   }
 
   &__wallet-memo-field {
-    min-width: $input-min-width-small;
-    max-width: $input-min-width-large;
+    min-width: 0;
+    max-width: 100%;
   }
 
   // VERIFICATION & BADGES
